# Robotik-Ros2

./: .gitignore  run_pycharm.sh  scene_demo.ttt  temp.py
helper/: topic_interface.sh
personal-scripts/: colcon-build.sh  coppeliasim.sh  get_pos.sh  keyboard.sh  mapping.sh  navigation.sh  visualization.sh
src/exploration/: package.xml  setup.py
src/hzz_interfaces/: CMakeLists.txt  package.xml
src/hzz_interfaces/msg/: QuadTree.msg  QuadTreeNode.msg
src/mapping/: explored_map.pkl  package.xml  setup.py
src/mapping/mapping/: map-data.npy  mapping.py  mapping_v.py
src/mapping/mapping/models/: OccupancyGrid.py  direction.py  exploration.py  mapconstants.py  multilayergrid.py  numpymap.py  opencvmap.py
src/navigation/: package.xml  setup.py
src/navigation/navigation/: keyboard.py  keyboard_v.py  navigate.py  navigate_v.py
src/navigation/navigation/models/: movement_override.py  obstacleavoidancepathfinder.py  raycasthit.py  straightvirtualraycast.py  visionblockedcheck.py
src/simple_listener/: package.xml  setup.py
src/simple_talker/: package.xml
src/visualization/: package.xml  setup.py
src/visualization/visualization/: grid_visualizer.py
